- Add if: expression (example-> if: isImportant 'important' is equals to cond: isImportant 'important' '')?
- Add data-telse and data-telse-condition tags?
- Add data-tswitch expression and data-tcase expression?
- Implement adquisition?

New in 0.36.0
- Add new command: update?
- Add options.bind (boolean) to set the list of properties to bind?

New in 0.35.0
- Add new tag: check?

New in 0.34.0
- Now exists expression returns true when the path expressions following its expression returns a value and it is not undefined. It is false when the path expression cannot locate an object or if it evaluates to undefined.
- Some exports added:
    - exports.I18nBundle
    - exports.expressionBuilder
    - exports.evaluateHelper
    - exports.ExpressionTokenizer
- Name of tags simplified. The new name of attributes are:
    - talCondition:     "data-condition"
    - talRepeat:        "data-repeat"
    - talAttributes:    "data-attributes"
    - talContent:       "data-content"
    - talDefine:        "data-define"
    - talOmitTag:       "data-omit-tag"
    - talReplace:       "data-replace"
    - talOnError:       "data-on-error"
    - metalDefineMacro: "data-define-macro"
    - metalUseMacro:    "data-use-macro"
    - metalDefineSlot:  "data-define-slot"
    - metalFillSlot:    "data-fill-slot"
    - i18nDomain:       "data-domain"
    - i18nLanguage:     "data-language"

New in 0.33.0
- Added support of folder dictionaries.
- Added nothing and default variables to all scopes. Added support of them to data-tcontent, data-treplace and data-trepeat. Added support of nothing to data-ton-error.
- Added support of structure to data-tcontent, data-ton-error and data-treplace.

New in 0.32.1
- Bug fixed: contents of metalFillSlot must not be evaluated.

New in 0.32.0
- New configuration option added: dictionaryExtension.

New in 0.31.1
- Bug fixed: malformed auto define tag in autoDefineHelper in some cases.

New in 0.31.0
- Nocall expression replaced by suffix in data-tdefine.