@@ -44,6 +44,7 @@
                             <li><a href="attributes-TALDefine.html">TALDefine</a>. Defines variables.</li>
                             <li><a href="attributes-TALOmitTag.html">TALOmitTag</a>. Leaves the contents of an element in place while omitting the surrounding start and end tags.</li>
                             <li><a href="attributes-TALOnError.html">TALOnError</a>. Provides error handling for your template.</li>
+                            <li><a href="attributes-TALProps.html">TALProps</a>. Declares a list of variables and some settings about them.</li>
                             <li><a href="attributes-TALRepeat.html">TALRepeat</a>. Replicates a sub-tree of your document once for each item in an array.</li>
                             <li><a href="attributes-TALReplace.html">TALReplace</a>. Replaces an element with dynamic content.</li>
                         </ul>
